--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "ipfs-http-client": "^33.1.1",
     "mdb-react-ui-kit": "^1.3.0",
     "mdb-ui-kit": "^3.9.0",
+    "moment": "^2.29.1",
+    "nft.storage": "^5.2.0",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
